@@ -41,6 +41,9 @@ Bugfixes:
 - Fix incorrect communicator attribute in MPI_COLLECTIVE_END events for
   `MPI_Comm_create_group`, `MPI_Comm_create_from_group`, `MPI_Comm_join`,
   and `MPI_Intercomm_create_from_groups`.
+- Fix generation of 'MpiRequestTested' events from `MPI_Test[all|any|some]`
+  wrappers for unsuccessful tests when enabled via
+  `SCOREP_MPI_ENABLE_GROUPS=xreqtest`.
 
 ------------------- Released version 8.3 -----------------------------
 
